// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`trusted_app_card TrustedAppCard should render correctly 1`] = `
<ItemDetailsCard>
  <ItemPropertySummary
    name="Name"
    value={
      <TextFieldValue
        fieldName="Name"
        maxLength={100}
        value="trusted app 4"
      />
    }
  />
  <ItemPropertySummary
    name="OS"
    value={
      <TextFieldValue
        fieldName="OS"
        value="Mac"
      />
    }
  />
  <ItemPropertySummary
    name="Date Created"
    value={
      <Memo(FormattedDate)
        className="eui-textTruncate"
        fieldName="Date Created"
        value="1 minute ago"
      />
    }
  />
  <ItemPropertySummary
    name="Created By"
    value={
      <TextFieldValue
        fieldName="Created By"
        value="someone"
      />
    }
  />
  <ItemPropertySummary
    name="Description"
    value={
      <TextFieldValue
        fieldName="Description"
        maxLength={100}
        value="Trusted App 4"
      />
    }
  />
  <ConditionsTable
    badge="and"
    columns={
      Array [
        Object {
          "field": "field",
          "name": "Field",
          "render": [Function],
          "sortable": false,
          "textOnly": true,
          "truncateText": true,
          "width": "30%",
        },
        Object {
          "field": "operator",
          "name": "Operator",
          "render": [Function],
          "sortable": false,
          "truncateText": true,
          "width": "20%",
        },
        Object {
          "data-test-subj": "conditionValue",
          "field": "value",
          "name": "Value",
          "render": [Function],
          "sortable": false,
          "width": "60%",
        },
      ]
    }
    items={Array []}
    responsive={true}
  />
  <ItemDetailsAction
    color="danger"
    data-test-subj="trustedAppDeleteButton"
    onClick={[Function]}
    size="s"
  >
    Remove
  </ItemDetailsAction>
</ItemDetailsCard>
`;

exports[`trusted_app_card TrustedAppCard should trim long texts 1`] = `
<ItemDetailsCard>
  <ItemPropertySummary
    name="Name"
    value={
      <TextFieldValue
        fieldName="Name"
        maxLength={100}
        value="trusted app 4 trusted app 4 trusted app 4 trusted app 4 trusted app 4 trusted app 4 trusted app 4 trusted app 4 trusted app 4 trusted app 4"
      />
    }
  />
  <ItemPropertySummary
    name="OS"
    value={
      <TextFieldValue
        fieldName="OS"
        value="Mac"
      />
    }
  />
  <ItemPropertySummary
    name="Date Created"
    value={
      <Memo(FormattedDate)
        className="eui-textTruncate"
        fieldName="Date Created"
        value="1 minute ago"
      />
    }
  />
  <ItemPropertySummary
    name="Created By"
    value={
      <TextFieldValue
        fieldName="Created By"
        value="someone"
      />
    }
  />
  <ItemPropertySummary
    name="Description"
    value={
      <TextFieldValue
        fieldName="Description"
        maxLength={100}
        value="Trusted App 4 Trusted App 4 Trusted App 4 Trusted App 4 Trusted App 4 Trusted App 4 Trusted App 4 Trusted App 4 Trusted App 4 Trusted App 4"
      />
    }
  />
  <ConditionsTable
    badge="and"
    columns={
      Array [
        Object {
          "field": "field",
          "name": "Field",
          "render": [Function],
          "sortable": false,
          "textOnly": true,
          "truncateText": true,
          "width": "30%",
        },
        Object {
          "field": "operator",
          "name": "Operator",
          "render": [Function],
          "sortable": false,
          "truncateText": true,
          "width": "20%",
        },
        Object {
          "data-test-subj": "conditionValue",
          "field": "value",
          "name": "Value",
          "render": [Function],
          "sortable": false,
          "width": "60%",
        },
      ]
    }
    items={Array []}
    responsive={true}
  />
  <ItemDetailsAction
    color="danger"
    data-test-subj="trustedAppDeleteButton"
    onClick={[Function]}
    size="s"
  >
    Remove
  </ItemDetailsAction>
</ItemDetailsCard>
`;
